<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.myapplication.ui.viewModel.EditProfileViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.EditProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edit_profile_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/edit_profile_title"
                android:textColor="@color/midDarck"
                android:textSize="30dp"
                android:textStyle="bold" />

            <!-- USERNAME -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/username_registration"
                app:boxStrokeColor="@color/lightDarck"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/lightDarck">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="14dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- EMAIL -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/email_registration"
                app:boxStrokeColor="@color/lightDarck"
                app:boxStrokeErrorColor="@color/red"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/lightDarck">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="14dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- PHONUMBER -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phonenumber_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/phonenuber_registration"
                app:boxStrokeColor="@color/lightDarck"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/lightDarck">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="14dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password modification -->
            <TextView
                android:id="@+id/password_modification_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/title_password_edit" />

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/password_edit"
                app:boxStrokeColor="@color/lightDarck"
                app:hintTextColor="@color/lightDarck"
                app:boxStrokeErrorColor="@color/red"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="14dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Comfirme Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_confirm_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/password_confirm_registration"
                app:boxStrokeColor="@color/lightDarck"
                app:hintTextColor="@color/lightDarck"
                app:boxStrokeErrorColor="@color/red"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="14dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- GENRE -->
            <TextView
                android:id="@+id/gender_modification_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/title_genre_registration" />

            <RadioGroup
                android:id="@+id/radioButtonGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/man_registration" />

                <RadioButton
                    android:id="@+id/radioButtonWommen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/women_registration" />
            </RadioGroup>

            <!-- Button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelled_edit_profile_button"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/midDarck"
                    android:text="@string/cancelled_button" />

                <Button
                    android:id="@+id/edit_profile_button"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:backgroundTint="@color/midDarck"
                    android:text="@string/validate_button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>